testing/tests/roundtrip/invalid/semantic/domain_issue/02/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/domain_issue/02/input.essence:8:37:
  |
8 |                | l_2 : set (minSize var1) of
  |                                     ^^^^
Cannot use variable of category : decision in the context of Domain

